# mint-token

./: Cargo.toml  README.md
src/: main.rs
